# chordial-front

./: README.md
ChordialUI/: ChannelNameStylebox.tres  DragTest.tscn  GraphUIRef.tres  Main.gd  Main.tscn  NodeView.gd  TextureBtn.gd  TrackContents.tscn  TrackHeader.gd  TrackHeader.tscn  Tree.gd  TreeDragPreview.tscn  chordial.gdextension  extension_list.cfg  icon.svg.import  project.godot  startup.chrp
ChordialUI/icons/: Add.svg.import  File.svg.import  Folder.svg.import  Pause.svg.import  Play.svg.import  Stop.svg.import
chordial-gd/: Cargo.toml
chordial-gd/src/: lib.rs
